rootskel (0.86) UNRELEASED; urgency=low

  * Bastian Blank
    - Make sure that debconf exits before we mount readonly.

 -- Bastian Blank <waldi@debian.org>  Sun, 11 Jul 2004 17:52:52 +0200

rootskel (0.85) unstable; urgency=low

  * Bastian Blank
    - Use small syslog output. Needs busybox-cvs 20040623-1.
    - Allow the exit code of debconf be non null.
    - Reboot/halt machine if asked to do so.
  * Joshua Kwan
    - Alias usb-ohci and usb-uhci to their respective *-hcd names when
      on 2.6, by writing to modules.conf.

 -- Bastian Blank <waldi@debian.org>  Sat, 10 Jul 2004 19:16:13 +0200

rootskel (0.84) unstable; urgency=low

  * Joey Hess
    - Minor output fix.

 -- Joey Hess <joeyh@debian.org>  Wed,  7 Jul 2004 10:45:39 -0400

rootskel (0.83) unstable; urgency=low

  * Kenshi Muto
    - Brush up fbcon / vga16fb loading routine.

 -- Kenshi Muto <kmuto@debian.org>  Wed,  7 Jul 2004 21:22:01 +0900

rootskel (0.82) unstable; urgency=low

  * Joey Hess
    - Load vesafb and vga16fb in paris along with fbcon, and don't assume
      it works until both load successfully. Closes: #257970

 -- Joey Hess <joeyh@debian.org>  Tue,  6 Jul 2004 22:33:13 -0400

rootskel (0.81) unstable; urgency=low

  * Colin Watson
    - Load AT keyboard modules only on powerpc chrp, chrp_pegasos, and prep.

 -- Colin Watson <cjwatson@debian.org>  Mon,  5 Jul 2004 22:47:34 +0100

rootskel (0.80) unstable; urgency=low

  * Kenshi Muto
    - Fix src/debian-installer.d/Makefile
      (Revert S33framebuffer-module-linux-i386 for i386) (Closes: #257687)

 -- Colin Watson <cjwatson@debian.org>  Mon,  5 Jul 2004 16:10:58 +0100

rootskel (0.79) unstable; urgency=low

  * Bastian Blank
    - Move startup code from lib/debian-installer.d and etc/rcS.d to
      lib/debian-installer-startup.d.
  * Colin Watson
    - Load i8042 and atkbd modules on powerpc 2.6. Some subarchitectures
      require them.
    - Remove null from debian-installer-startup in inittab; Bastian says "it