@@ -1,10 +1,0 @@
-case "$(uname -r)" in
-  2.6.*)
-cat > /etc/modprobe.conf <<EOF
-alias usb-ohci ohci-hcd
-alias usb-uhci uhci-hcd
-EOF
-# In case busybox modutils suddenly improves
-ln -sf modprobe.conf /etc/conf.modules
-  ;;
-esac
