@@ -1,13 +1,18 @@
-case `readlink /proc/self/fd/0` in
-	/dev/console|/dev/tts/*)
-		TERM_TYPE=serial
-		;;
-	/dev/vc/*)
-		TERM_TYPE=virtual
-		;;
-	/dev/pts/*)
-		TERM_TYPE=pts
-		;;
-esac
+if [ -z "$TERM_TYPE" ]; then
+	case `readlink /proc/self/fd/0` in
+		/dev/console|/dev/tts/*)
+			TERM_TYPE=serial
+			;;
+		/dev/vc/*)
+			TERM_TYPE=virtual
+			if [ "`debconf-get debian-installer/framebuffer`" = true ]; then
+				TERM_FRAMEBUFFER_TRY=yes
+			fi
+			;;
+		/dev/pts/*)
+			TERM_TYPE=pts
+			;;
+	esac
+fi
 
 export TERM_TYPE
