@@ -12,5 +12,3 @@ if [ "$TERM" = linux ] ; then
 		fi
 	fi
 fi
-
-export TERM_UTF8
