@@ -1,3 +1,0 @@
-if [ "$TERM_TYPE" = virtual ] && [ -n "$TERM_UTF8" ] ; then
-    echo -ne "\033%@" # Disable UTF-8 console
-fi
